--- a/package.json
+++ b/package.json
@@ -4,13 +4,18 @@
   "private": true,
   "scripts": {
     "build": "vite build",
-    "dev": "vite --host",
+    "dev": "vite --host --port 3007",
     "preview": "vite preview"
   },
   "dependencies": {
+    "autosize": "^6.0.1",
+    "axios": "^1.4.0",
+    "socket.io-client": "^4.6.2",
     "vue": "^3.2.47",
     "vue-router": "^4.2.1",
-    "vuex": "^4.0.0"
+    "vue3-toastify": "^0.1.11",
+    "vuex": "^4.0.0",
+    "vuex-persist": "^3.1.3"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.1.0",
